<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:app=""http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Preferences"/>
        //app:showAsAction="never"


</menu>
